--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,15 @@
 [user]
 	name = Miquel de Domingo
 	email = miquelddg@gmail.com
+[core]
+	editor = nvim
+	pager = diff-so-fancy | less --tabs=2 -RFXS --pattern '^(Date|added|deleted|modified)'
+[github]
+	user = MikeDedo
+[hub]
+	protocol = https
+[color]
+	ui = true
 [credential]
 	helper = store
 [init]
